@@ -18,6 +18,8 @@ icon: zuanshi
 image: https://img.springlearn.cn/blog/learn_1654183539000.png
 ---
 
+[示例代码地址](https://github.com/lxchinesszz/learn-example/blob/master/learn-jvm/src/test/java/learn/jvm)
+
 ## 一、JVM内存介绍
 
 我们在学习JVM的内存管理的时候,我们的思维要跳出Java的局限。我们要这么理解。我们写的Java代码，是运行在JVM上的。
@@ -176,6 +178,9 @@ image: https://img.springlearn.cn/blog/learn_1654183539000.png
 
 ### 3.1.1 模拟堆栈
 
+- `HeapOverflowTest`
+- `StackOverflowTest`
+
 ### 3.1.2 现象
 
 1. 频繁进行fu gc
@@ -193,7 +198,34 @@ image: https://img.springlearn.cn/blog/learn_1654183539000.png
 
 ## 3.2 CPU飙升
 
-### 3.2.1 解决方案
+CPU飙升,可能是有线程一直在占用CPU。发生了死锁，发生了死循环之类的。这些情况是有问题的。
+但是当你的机器流量比较大时候,同样也会导致CPU飙升,此时可能就需要加机器来进行解决。或者仅限限流。下面
+只说有问题的场景,如何查看线程状态。
+
+
+### 3.2.1 模拟异常
+
+```java 
+public class CPU {
+
+    public static void main(String[] args) {
+        for (int i = 0; i < 10; i++) {
+            new Thread(() -> {
+                while (true) {
+
+                }
+            }).start();
+        }
+    }
+}
+```
+
+### 3.2.2 现象
+
+- 系统卡顿,吞吐量下降
+- 如果没有限制启动参数,可能会导致宿主机也非常卡段,引用占用了很大CPU
+
+### 3.2.3 解决方案
 
 1. 找到那些线程在阻塞 `jstack $PID`
 2. 如下片段发现线程都是 `BLOCKED` 状态, 调用点都在 `CPU.java:18`
@@ -224,7 +256,106 @@ image: https://img.springlearn.cn/blog/learn_1654183539000.png
 	at java.lang.Thread.run(Thread.java:748)
 ```
 
+::: tip Arthas
+当然如果你安装了 `Arthas`
 
+你可以 `thread -n 3` 打印出最忙的三个线程  [thread](https://arthas.gitee.io/thread.html#cpu).
+直接输入cpu使用量
+
+thread -b, 找出当前阻塞其他线程的线程
+:::
+
+``` 
+"Thread-8" Id=19 cpuUsage=89.17% deltaTime=188ms time=17319ms RUNNABLE
+    at learn.jvm.CPU.lambda$main$0(CPU.java:13)
+    at learn.jvm.CPU$$Lambda$1/500977346.run(Unknown Source)
+    at java.lang.Thread.run(Thread.java:748)
+
+
+"Thread-1" Id=12 cpuUsage=85.62% deltaTime=180ms time=17296ms RUNNABLE
+    at learn.jvm.CPU.lambda$main$0(CPU.java:13)
+    at learn.jvm.CPU$$Lambda$1/500977346.run(Unknown Source)
+    at java.lang.Thread.run(Thread.java:748)
+
+
+"Thread-3" Id=14 cpuUsage=84.42% deltaTime=178ms time=17315ms RUNNABLE
+    at learn.jvm.CPU.lambda$main$0(CPU.java:13)
+    at learn.jvm.CPU$$Lambda$1/500977346.run(Unknown Source)
+    at java.lang.Thread.run(Thread.java:748)
+
+```
 
 ## 3.3 非堆空间导致OOM
 
+
+### 3.3.1 模拟异常
+
+启动参数: `-XX:MetaspaceSize=120m -XX:MaxMetaspaceSize=120m -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:/Users/liuxin/Github/learn-example/logs/gc.log`
+
+```java 
+public class MetaspaceOverflowTest {
+
+    /**
+     * 查看元空间配置
+     * java -XX:+PrintFlagsFinal -version | grep Metaspace
+     * 方法区是JVM规范。
+     * - 永久代和元空间是实现
+     * 元空间调优规则:
+     * 1. 最大最小设置成一样大
+     * 防止内存抖动
+     *
+     * @param args -XX:MetaspaceSize=20m
+     *             -XX:MaxMetaspaceSize=20m
+     *             java.lang.OutOfMemoryError-->Metaspace
+     */
+    public static void main(String[] args) {
+//        while (true) {
+            Sleeps.sleep(0.2);
+            for (int i = 0; i < 200; i++) {
+                Enhancer enhancer = new Enhancer();
+                enhancer.setSuperclass(MetaspaceOverflowTest.class);
+                enhancer.setUseCache(false);
+                enhancer.setCallback(new MethodInterceptor() {
+                    @Override
+                    public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+                        return methodProxy.invokeSuper(objects, args);
+                    }
+                });
+                System.out.println("create InstanceKlass...");
+                enhancer.create();
+            }
+//        }
+        while (true);
+        //  java.lang.OutOfMemoryError-->Metaspace
+    }
+}
+```
+
+
+### 3.3.2 现象
+
+当你收到运维告警,或者是明显感觉到系统吞吐量下降,甚至会有oom异常的时候,首先先去看下 GC日志，找到GC的原因。下面看下非堆空间溢出导致的GC日志,并配上前面的GC日志学习。来
+排查下问题。
+
+``` 
+CommandLine flags: -XX:CompressedClassSpaceSize=12582912 -XX:InitialHeapSize=268435456 -XX:MaxHeapSize=4294967296 -XX:MaxMetaspaceSize=20971520 -XX:MetaspaceSize=20971520 -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseParallelGC 
+2022-06-20T18:12:26.411-0800: 1.749: [GC (Allocation Failure) [PSYoungGen: 65536K->3006K(76288K)] 65536K->3006K(251392K), 0.0233877 secs] [Times: user=0.06 sys=0.02, real=0.02 secs] 
+2022-06-20T18:12:26.960-0800: 2.298: [GC (Allocation Failure) [PSYoungGen: 68542K->3264K(141824K)] 68542K->3272K(316928K), 0.0194187 secs] [Times: user=0.08 sys=0.02, real=0.02 secs] 
+2022-06-20T18:12:27.824-0800: 3.162: `[GC (Allocation Failure)` [PSYoungGen: 134336K->5264K(141824K)] 134344K->5280K(316928K), 0.0145565 secs] [Times: user=0.06 sys=0.02, real=0.01 secs] 
+2022-06-20T18:12:28.526-0800: 3.864: [GC (Allocation Failure) [PSYoungGen: 136336K->6928K(272896K)] 136352K->6952K(448000K), 0.0198281 secs] [Times: user=0.09 sys=0.03, real=0.02 secs] 
+2022-06-20T18:12:29.252-0800: 4.590: [GC (Metadata GC Threshold) [PSYoungGen: 187304K->8848K(272896K)] 187328K->8880K(448000K), 0.0217320 secs] [Times: user=0.10 sys=0.02, real=0.02 secs] 
+2022-06-20T18:12:29.274-0800: 4.612: [Full GC (Metadata GC Threshold) [PSYoungGen: 8848K->0K(272896K)] [ParOldGen: 32K->8685K(86016K)] 8880K->8685K(358912K), [Metaspace: 20088K->20088K(1069056K)], 0.0245986 secs] [Times: user=0.10 sys=0.01, real=0.02 secs] 
+2022-06-20T18:12:29.299-0800: 4.637: [GC (Last ditch collection) [PSYoungGen: 0K->0K(476160K)] 8685K->8685K(562176K), 0.0005319 secs] [Times: user=0.01 sys=0.00, real=0.01 secs] 
+2022-06-20T18:12:29.300-0800: 4.638: [Full GC (Last ditch collection) [PSYoungGen: 0K->0K(476160K)] [ParOldGen: 8685K->3731K(155648K)] 8685K->3731K(631808K), [Metaspace: 20088K->20088K(1069056K)], 0.0187273 secs] [Times: user=0.07 sys=0.01, real=0.01 secs] 
+```
+
+从面的GC日志中我们能找到些GC原因,通过前面的学习。我们可以判断出来。
+
+![](https://img.springlearn.cn/blog/learn_1655720314000.png)
+
+属于非堆空间造成的OOM。
+
+### 3.3.3 解决方案
+
+1. 排查看应用中是否有动态创建Class的地方
+2. 添加元空间大小(如果应用配置限制元空间大小,还出现了这样的问题,一般一定是程序中有bug导致)
